// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`It should render Metadata component correctly 1`] = `
.c4 {
  color: #0097A7;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c4:hover {
  color: #006064;
}

.c0 {
  font-size: 0.9rem;
  line-height: 1.6rem;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}

.c1 {
  display: inline;
}

.c1:not(:first-child) {
  margin-left: 8px;
}

.c2 {
  display: inline;
}

.c3 {
  margin: 0;
  display: inline;
}

.c3:not(:first-child):before {
  content: "/";
  margin: 0 3px;
}

.c5 {
  margin-bottom: -5px;
}

.c5:hover {
  -webkit-transform: rotate(-10deg);
  -ms-transform: rotate(-10deg);
  transform: rotate(-10deg);
}

.c6 {
  display: none;
  position: absolute;
  line-height: 1.2em;
  padding: 4px;
  border-radius: 3px;
  background: #00897B;
  color: #FFFFFF;
  -webkit-transition: opacity .3s ease-out;
  transition: opacity .3s ease-out;
}

.c6:before {
  content: "";
  position: absolute;
  width: 0;
  height: 0;
  left: -15px;
  top: 4px;
  border: 8px solid transparent;
  border-right-color: #00897B;
}

@media (max-width:800px) {
  .c6 {
    display: none;
  }
}

<ul
  className="c0"
>
  <li
    className="c1"
  >
    分類：
    <ul
      className="c2"
    >
      <li
        className="c3"
      >
        <a
          className="c4"
          onClick={[Function]}
          style={Object {}}
        >
          name
        </a>
      </li>
      <li
        className="c3"
      >
        <a
          className="c4"
          onClick={[Function]}
          style={Object {}}
        >
          name2
        </a>
      </li>
    </ul>
  </li>
  <li
    className="c1"
  >
    字數：
    <img
      alt="雞"
      className="c5"
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      src={
        Object {
          "default": Object {},
        }
      }
    />
     x 
    1
    <span
      className="c6"
    >
      雞數：計算文長的常見計量單位，一般而言數字大小與文章長度呈正相關
    </span>
  </li>
  <li
    className="c1"
  >
    發表時間：
    2017/07/09
  </li>
</ul>
`;

exports[`It should render Metadata component correctly when target article has been modified 1`] = `
.c4 {
  color: #0097A7;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c4:hover {
  color: #006064;
}

.c0 {
  font-size: 0.9rem;
  line-height: 1.6rem;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}

.c1 {
  display: inline;
}

.c1:not(:first-child) {
  margin-left: 8px;
}

.c2 {
  display: inline;
}

.c3 {
  margin: 0;
  display: inline;
}

.c3:not(:first-child):before {
  content: "/";
  margin: 0 3px;
}

.c5 {
  margin-bottom: -5px;
}

.c5:hover {
  -webkit-transform: rotate(-10deg);
  -ms-transform: rotate(-10deg);
  transform: rotate(-10deg);
}

.c6 {
  display: none;
  position: absolute;
  line-height: 1.2em;
  padding: 4px;
  border-radius: 3px;
  background: #00897B;
  color: #FFFFFF;
  -webkit-transition: opacity .3s ease-out;
  transition: opacity .3s ease-out;
}

.c6:before {
  content: "";
  position: absolute;
  width: 0;
  height: 0;
  left: -15px;
  top: 4px;
  border: 8px solid transparent;
  border-right-color: #00897B;
}

@media (max-width:800px) {
  .c6 {
    display: none;
  }
}

<ul
  className="c0"
>
  <li
    className="c1"
  >
    分類：
    <ul
      className="c2"
    >
      <li
        className="c3"
      >
        <a
          className="c4"
          onClick={[Function]}
          style={Object {}}
        >
          name
        </a>
      </li>
    </ul>
  </li>
  <li
    className="c1"
  >
    字數：
    <img
      alt="雞"
      className="c5"
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      src={
        Object {
          "default": Object {},
        }
      }
    />
     x 
    1
    <span
      className="c6"
    >
      雞數：計算文長的常見計量單位，一般而言數字大小與文章長度呈正相關
    </span>
  </li>
  <li
    className="c1"
  >
    發表時間：
    2017/07/09
  </li>
  <li
    className="c1"
  >
    最後更新：
    2017/11/09
  </li>
</ul>
`;
